--- a/package.json
+++ b/package.json
@@ -5,18 +5,35 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.1",
-    "@testing-library/user-event": "^12.2.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.13.1",
+    "bootstrap": "^4.6.0",
+    "concurrently": "^6.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "faker": "^5.4.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
+    "react-css-grid": "^2.0.0-0",
     "react-dom": "^17.0.1",
+    "react-flexbox-grid": "^2.1.2",
+    "react-grid-layout": "^1.2.2",
+    "react-grid-system": "^7.1.2",
     "react-icon": "^1.0.0",
     "react-icons": "^3.11.0",
+    "react-native": "^0.63.4",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "reactstrap": "^8.8.0",
+    "react-scripts": "^4.0.0",
+    "reactstrap": "^8.9.0",
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.0",
+    "standard": "^16.0.3",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xss": "^1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
