--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-flexbox-grid": "^2.1.2",
     "react-grid-layout": "^1.2.2",
     "react-grid-system": "^7.1.2",
+    "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^3.11.0",
     "react-native": "^0.63.4",
