--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.13.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
@@ -37,7 +38,7 @@
     "xss": "^1.0.8"
   },
   "scripts": {
-    "server":"NODE_ENV=production nodemon index.js",
+    "server": "nodemon app.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
