--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react-helmet": "^6.1.0",
     "react-icon": "^1.0.0",
     "react-icons": "^3.11.0",
-    "react-native": "^0.63.4",
+    "react-native": ">=0.64.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
